--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAFR6aKKyD136EEc_9ehdOy1LfUMIiWMA8" />
+            android:value="" />
 
         <activity
             android:name=".MapsListing"
